--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ node_modules
 # We don't check in compiled files. They are created upon npm publish and npm install.
 build-esm
 build-cjs
+
+.eslintcache
