--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"build:tsc:esm": "tsc -p ./tsconfig.build-esm.json",
 		"build:cpy": "cpy ./src/main.mjs ./build-cjs/src",
 		"build:update": "./bin/update.js",
+		"prepare": "husky install",
 		"update:psl-fixture": "ts-node --transpile-only ./src/scripts/update-psl-fixture.ts",
 		"update:tries": "ts-node --transpile-only ./src/scripts/update-tries.ts -- ../../serialized-tries",
 		"update:dependencies": "updtr"
@@ -51,33 +52,31 @@
 	"sideEffects": false,
 	"dependencies": {
 		"is-ip": "^3.1.0",
-		"node-fetch": "^2.6.0",
+		"node-fetch": "^2.6.1",
 		"punycode": "^2.1.1"
 	},
 	"devDependencies": {
-		"@types/jest": "^25.2.1",
-		"@types/node": "^13.11.0",
-		"@types/node-fetch": "^2.5.5",
+		"@types/jest": "^27.0.1",
+		"@types/node": "^16.7.10",
+		"@types/node-fetch": "^2.5.12",
 		"@types/punycode": "^2.1.0",
-		"@typescript-eslint/eslint-plugin": "^2.26.0",
-		"@typescript-eslint/parser": "^2.26.0",
-		"cpy-cli": "^3.1.0",
-		"eslint": "^6.8.0",
-		"eslint-config-peerigon": "^27.6.0",
-		"eslint-import-resolver-typescript": "^2.0.0",
+		"@typescript-eslint/eslint-plugin": "^4.30.0",
+		"@typescript-eslint/parser": "^4.30.0",
+		"cpy-cli": "^3.1.1",
+		"eslint": "^7.32.0",
+		"eslint-config-peerigon": "^31.0.2",
 		"eslint-plugin-no-null": "^1.0.2",
-		"eslint-plugin-prefer-arrow": "^1.1.7",
-		"husky": "^4.2.3",
-		"jest": "^25.2.7",
-		"nock": "^12.0.3",
+		"husky": "^7.0.2",
+		"jest": "^27.1.0",
+		"nock": "^13.1.3",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^2.0.2",
-		"pretty-quick": "^2.0.1",
+		"prettier": "^2.3.2",
+		"pretty-quick": "^3.1.1",
 		"rimraf": "^3.0.2",
-		"ts-jest": "^25.3.1",
-		"ts-node": "^8.8.2",
-		"typescript": "^3.8.3",
-		"updtr": "^3.1.0"
+		"ts-jest": "^27.0.5",
+		"ts-node": "^10.2.1",
+		"typescript": "^4.4.2",
+		"updtr": "^4.0.0"
 	},
 	"husky": {
 		"hooks": {
