--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: ["🧪 Test"]
     branches:
-      - master
+      - main
       - beta
     types:
       - completed
