--- a/package.json
+++ b/package.json
@@ -50,6 +50,14 @@
     "build-esm"
   ],
   "sideEffects": false,
+  "lint-staged": {
+    "*.{ts,js}": "eslint --cache --fix",
+    ".github/workflows/*.{yml,yaml}": [
+      "pin-github-action --allow-empty",
+      "prettier --write"
+    ],
+    "*.{ts,js,css,md,yml,yaml}": "prettier --write"
+  },
   "dependencies": {
     "is-ip": "^3.1.0",
     "node-fetch": "^2.6.1",
@@ -69,10 +77,11 @@
     "eslint-plugin-node": "^11.1.0",
     "husky": "^7.0.2",
     "jest": "^27.1.0",
+    "lint-staged": "^11.1.2",
     "nock": "^13.1.3",
     "npm-run-all": "^4.1.5",
+    "pin-github-action": "^1.4.0",
     "prettier": "^2.3.2",
-    "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
