feat: Improve validation
This commit introduces two different validation modes:
- Strict (default): Only allows letters, digits, hyphens
- Lax: Allows any octets and just checks for the max lengths

This allows domains to have an underscore character. Closes https://github.com/peerigon/parse-domain/issues/134

BREAKING CHANGE: Introduces a dependency on the global `TextEncoder` constructor which should be available in all modern engines
(see https://developer.mozilla.org/en-US/docs/Web/API/TextEncoder). The strict validation mode (which is the default) will also be a little bit more strict since it will now also check for hyphens at the beginning or end of a domain label. It also requires top-level domain names not to be all-numeric.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "import": "./build-esm/src/main.js"
   },
   "scripts": {
-    "test": "jest",
+    "test": "run-p test:*",
+    "test:suite": "jest",
     "posttest": "run-s build posttest:*",
     "posttest:lint": "eslint --cache --ext js,ts *.js src bin",
     "build": "run-s build:*",
