--- a/package.json
+++ b/package.json
@@ -64,8 +64,7 @@
   },
   "dependencies": {
     "is-ip": "^3.1.0",
-    "node-fetch": "^2.6.1",
-    "punycode": "^2.1.1"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
