Migrate package to ECMAScript modules
BREAKING CHANGE: parse-domain will now be released as native ECMAScript module. There's no CommonJS build anymore. If you're still using CommonJS, you need to import it asynchronously using `await import("parse-domain")`. If you're still using Node 12, you may need to update it to the latest 12.x version.

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,6 @@ coverage
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
 
 # Dependency directory
 node_modules
@@ -36,7 +34,7 @@ node_modules
 .node_repl_history
 
 # We don't check in compiled files. They are created upon npm publish and npm install.
-build-esm
-build-cjs
+build
+serialized-tries
 
 .eslintcache
