--- a/package.json
+++ b/package.json
@@ -11,30 +11,23 @@
     "sanitize",
     "top-level"
   ],
-  "main": "./build-cjs/src/main.js",
-  "module": "./build-esm/src/main.js",
-  "types": "./build-esm/src/main.d.ts",
-  "exports": {
-    "require": "./build-cjs/src/main.js",
-    "node": "./build-cjs/src/main.mjs",
-    "default": "./build-esm/src/main.js"
-  },
+  "type": "module",
+  "main": "./build/src/main.js",
+  "types": "./build/src/main.d.ts",
   "scripts": {
     "test": "run-p test:*",
-    "test:suite": "jest",
-    "posttest": "run-s build posttest:*",
-    "posttest:lint": "eslint --cache --ext js,ts *.js src bin",
+    "test:suite": "node --no-warnings --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "test:lint": "eslint --max-warnings 0 --cache --ext js,ts --ignore-path .gitignore .",
     "build": "run-s build:*",
-    "build:cleanup": "rimraf build-cjs build-esm",
-    "build:tsc": "run-p build:tsc:cjs build:tsc:esm",
-    "build:tsc:cjs": "tsc -p ./tsconfig.build-cjs.json",
-    "build:tsc:esm": "tsc -p ./tsconfig.build-esm.json",
-    "build:cpy": "cpy ./src/main.mjs ./build-cjs/src",
+    "build:cleanup": "rimraf build",
+    "build:tsc": "tsc -p ./tsconfig.build.json",
     "build:update": "./bin/update.js",
-    "prepare": "husky install",
-    "update:psl-fixture": "ts-node --transpile-only ./src/scripts/update-psl-fixture.ts",
-    "update:tries": "ts-node --transpile-only ./src/scripts/update-tries.ts -- ../../serialized-tries",
-    "update:dependencies": "updtr"
+    "prepare": "run-s prepare:*",
+    "prepare:husky": "husky install",
+    "prepare:build": "npm run build",
+    "update:psl-fixture": "npm run node -- ./src/scripts/update-psl-fixture.ts",
+    "update:dependencies": "updtr",
+    "node": "node --no-warnings --loader ts-node/esm/transpile-only"
   },
   "bin": {
     "parse-domain-update": "./bin/update.js"
@@ -47,8 +40,8 @@
   "license": "MIT",
   "files": [
     "bin",
-    "build-cjs",
-    "build-esm"
+    "build",
+    "serialized-tries"
   ],
   "sideEffects": false,
   "lint-staged": {
@@ -63,17 +56,15 @@
     "*.{json,css,md,yml,yaml}": "prettier --write"
   },
   "dependencies": {
-    "is-ip": "^3.1.0",
-    "node-fetch": "^2.6.1"
+    "is-ip": "^4.0.0",
+    "node-fetch": "^3.2.0"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
-    "@types/node-fetch": "^2.5.12",
     "@types/punycode": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
-    "cpy-cli": "^3.1.1",
     "eslint": "^8.7.0",
     "eslint-config-peerigon": "^33.2.4",
     "eslint-plugin-no-null": "^1.0.2",
