fix: Inline sourceContents in source maps
The original sources that the source map were pointing to were not included in the package build. This change inlines the sourceContents into the source map.

Fixes Error when update version (Webpack) #149

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "outDir": "build",
     "target": "es2015",
-    "module": "esnext"
+    "module": "esnext",
+    "sourceMap": true,
+    "inlineSources": true,
+    "declaration": true
   },
   "include": ["src"],
   "exclude": ["src/**/*.test.ts", "src/tests/**/*.ts"]
