--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prepare:build": "npm run build",
     "update:psl-fixture": "npm run node -- ./src/scripts/update-psl-fixture.ts",
     "update:dependencies": "updtr",
-    "node": "node --no-warnings --loader ts-node/esm/transpile-only"
+    "node": "node --no-warnings --loader ts-node/esm/transpile-only",
+    "release": "semantic-release"
   },
   "bin": {
     "parse-domain-update": "./bin/update.js"
@@ -60,6 +61,8 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.9",
     "eslint": "^8.52.0",
@@ -73,9 +76,13 @@
     "pin-github-action": "^1.8.0",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
+    "semantic-release": "^24.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "updtr": "^4.0.0"
+  },
+  "publishConfig": {
+    "provenance": true
   }
 }
