--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -10,14 +10,15 @@ on:
 jobs:
   test-and-release:
     runs-on: ubuntu-latest
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
-      cancel-in-progress: true
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
 
     strategy:
       matrix:
         node-version: [18.x, 22.x]
+
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.node-version }}
+      cancel-in-progress: true
 
     steps:
       - name: ⬇️ Checkout repo
