--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "test": "run-p test:*",
     "test:suite": "node --no-warnings --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "test:lint": "eslint --max-warnings 0 --cache --ext js,ts --ignore-path .gitignore .",
+    "test:format": "prettier --check .",
     "build": "run-s build:*",
     "build:cleanup": "rimraf build",
     "build:tsc": "tsc -p ./tsconfig.build.json",
     "build:update": "./bin/update.js",
-    "prepare": "run-s prepare:*",
-    "prepare:husky": "husky install",
+    "prepare": "run-p prepare:*",
+    "prepare:husky": "husky",
     "prepare:build": "npm run build",
     "update:psl-fixture": "npm run node -- ./src/scripts/update-psl-fixture.ts",
     "update:dependencies": "updtr",
@@ -63,24 +64,24 @@
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/jest": "^29.5.6",
-    "@types/node": "^20.8.9",
-    "eslint": "^8.52.0",
-    "eslint-config-peerigon": "^36.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.12",
+    "eslint": "^8.57.0",
+    "eslint-config-peerigon": "^39.1.0",
     "eslint-plugin-no-null": "^1.0.2",
-    "husky": "^8.0.3",
+    "husky": "^9.1.2",
     "jest": "^29.7.0",
-    "lint-staged": "^15.0.2",
-    "nock": "^13.3.6",
+    "lint-staged": "^15.2.7",
+    "nock": "^13.5.4",
     "npm-run-all": "^4.1.5",
-    "pin-github-action": "^1.8.0",
-    "prettier": "^3.0.3",
-    "rimraf": "^5.0.5",
+    "pin-github-action": "^1.9.1",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "semantic-release": "^24.0.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "updtr": "^4.0.0"
+    "ts-jest": "^29.2.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
+    "updtr": "^4.1.0"
   },
   "publishConfig": {
     "provenance": true
