--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "*.{json,css,md,yml,yaml}": "prettier --write"
   },
   "dependencies": {
-    "is-ip": "^5.0.1",
-    "node-fetch": "^3.3.2"
+    "is-ip": "^5.0.1"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
@@ -72,7 +71,7 @@
     "husky": "^9.1.2",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
-    "nock": "^13.5.4",
+    "nock": "^14.0.0-beta.9",
     "npm-run-all": "^4.1.5",
     "pin-github-action": "^1.9.1",
     "prettier": "^3.3.3",
