--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "types": "./build/main.d.ts",
   "scripts": {
     "test": "run-p test:*",
-    "test:suite": "node --no-warnings --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "test:suite": "vitest",
     "test:lint": "eslint --max-warnings 0 --cache --ext js,ts --ignore-path .gitignore .",
     "test:format": "prettier --check .",
+    "test:types": "tsc --noEmit",
     "build": "run-s build:*",
     "build:cleanup": "rimraf build",
     "build:tsc": "tsc -p ./tsconfig.build.json",
@@ -63,13 +64,11 @@
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.12",
     "eslint": "^8.57.0",
     "eslint-config-peerigon": "^39.1.0",
     "eslint-plugin-no-null": "^1.0.2",
     "husky": "^9.1.2",
-    "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "nock": "^14.0.0-beta.9",
     "npm-run-all": "^4.1.5",
@@ -77,10 +76,10 @@
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "semantic-release": "^24.0.0",
-    "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
-    "updtr": "^4.1.0"
+    "updtr": "^4.1.0",
+    "vitest": "^2.0.4"
   },
   "publishConfig": {
     "provenance": true
