Fix coverall action

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -51,7 +51,7 @@ jobs:
           CI: true
       - name: ⬆️ Upload coverage report
         uses: coverallsapp/github-action@643bc377ffa44ace6394b2b5d0d3950076de9f63 # pin@main
-        if: "contains(' refs/heads/main refs/heads/beta ', github.ref) && matrix.node-version == '22.x'"
+        if: "matrix.node-version == '22.x'"
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 🚀 Release
