Migrate semantic-release to @peerigon/configs
- Added @peerigon/configs as devDependency
- Updated .releaserc.json to extend @peerigon/configs/semantic-release
- Removed redundant @semantic-release/changelog and @semantic-release/git from package.json
- Added .npmrc with legacy-peer-deps flag to handle ESLint version conflicts temporarily

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,16 +1,3 @@
 {
-  "branches": ["main", { "name": "beta", "prerelease": true }],
-  "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
-    [
-      "@semantic-release/git",
-      {
-        "assets": ["CHANGELOG.md"]
-      }
-    ],
-    "@semantic-release/github",
-    "@semantic-release/npm"
-  ]
+  "extends": "@peerigon/configs/semantic-release/cross-publish"
 }
