--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
   "author": "peerigon <developers@peerigon.com>",
   "sideEffects": false,
   "type": "module",
-  "main": "./build/main.js",
-  "types": "./build/main.d.ts",
+  "main": "./dist/main.js",
+  "types": "./dist/main.d.ts",
   "bin": {
     "parse-domain-update": "./bin/update.js"
   },
   "files": [
     "bin",
-    "build",
+    "dist",
     "serialized-tries"
   ],
   "scripts": {
     "test": "run-p test:*",
     "test:suite": "vitest run --coverage",
-    "test:lint": "eslint --max-warnings 0 --cache --ext js,ts --ignore-path .gitignore .",
+    "test:lint": "eslint --max-warnings 0 --cache .",
     "test:format": "prettier --check .",
     "test:types": "tsc --noEmit",
     "build": "run-s build:*",
-    "build:cleanup": "rimraf build",
+    "build:cleanup": "rimraf dist",
     "build:tsc": "tsc -p ./tsconfig.build.json",
     "build:update": "./bin/update.js",
     "prepare": "run-p prepare:*",
@@ -65,9 +65,7 @@
     "@peerigon/configs": "^7.0.0",
     "@types/node": "^20.14.12",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^8.57.0",
-    "eslint-config-peerigon": "^39.1.0",
-    "eslint-plugin-no-null": "^1.0.2",
+    "eslint": "^9.21.0",
     "husky": "^9.1.2",
     "lint-staged": "^15.2.7",
     "nock": "^14.0.0-beta.9",
@@ -77,7 +75,7 @@
     "rimraf": "^6.0.1",
     "semantic-release": "^24.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
+    "typescript": "^5.8.2",
     "updtr": "^4.1.0",
     "vitest": "^3.2.4"
   },
