--- a/package.json
+++ b/package.json
@@ -62,22 +62,22 @@
     "is-ip": "^5.0.1"
   },
   "devDependencies": {
-    "@peerigon/configs": "^7.0.0",
-    "@types/node": "^20.14.12",
-    "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9.21.0",
-    "husky": "^9.1.2",
-    "lint-staged": "^15.2.7",
-    "nock": "^14.0.0-beta.9",
+    "@peerigon/configs": "^11.0.2",
+    "@types/node": "^24.10.0",
+    "@vitest/coverage-v8": "^4.0.6",
+    "eslint": "9.38.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
+    "nock": "^14.0.10",
     "npm-run-all": "^4.1.5",
     "pin-github-action": "^3.4.0",
-    "prettier": "^3.3.3",
-    "rimraf": "^6.0.1",
-    "semantic-release": "^24.0.0",
+    "prettier": "^3.6.2",
+    "rimraf": "^6.1.0",
+    "semantic-release": "^25.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2",
+    "typescript": "^5.9.3",
     "updtr": "^4.1.0",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.6"
   },
   "publishConfig": {
     "access": "public",
